REGRESSION (310465@main): prefers-color-scheme in an iframe ignores system preference when the main page does not set an explicit color-scheme. https://bugs.webkit.org/show_bug.cgi?id=311766

Reviewed by Simon Fraser.

310465@main changed how subframes resolve prefers-color-scheme: instead of reading the
system preference, they now inherit it from the color-scheme property of their parent page.

This accidentally broke the case where the parent page has no explicit color-scheme set,
so the iframe has nothing to inherit and then the code defaults to light instead of falling
back to the system preference.

The patch changes the code to look if the parent has an explicit color-scheme set before
inheriting from it. If it doesn't then defaults to the system preference like before 310465@main.

This behaviour is consistent with how Chrome (147) and Firefox (149) handle this.

Tests: prefers-color-scheme-in-iframe-follows-system-preference-without-parent-color-scheme.html
       http/tests/css/prefers-color-scheme-in-cross-origin-iframe-follows-system-preference-without-parent-color-scheme.html

* LayoutTests/css-dark-mode/prefers-color-scheme-in-iframe-follows-system-preference-without-parent-color-scheme-expected.html: Added.
* LayoutTests/css-dark-mode/prefers-color-scheme-in-iframe-follows-system-preference-without-parent-color-scheme.html: Added.
* LayoutTests/http/tests/css/prefers-color-scheme-in-cross-origin-iframe-follows-system-preference-without-parent-color-scheme-expected.html: Added.
* LayoutTests/http/tests/css/prefers-color-scheme-in-cross-origin-iframe-follows-system-preference-without-parent-color-scheme.html: Added.
* LayoutTests/platform/ios-site-isolation/TestExpectations:
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Source/WebCore/css/query/MediaQueryFeatures.cpp:
(WebCore::MQ::Features::frameUsesDarkAppearanceForPrefersColorScheme):

Canonical link: https://commits.webkit.org/310874@main